tests/panics/01_unused.snap
---
source: tests/lib.rs
---
exit_code = 1
stdout = '''
the 01_unused crate FAILED the sniff test
'''
stderr = '''
warning: unused variable: `f`
  --> [SNIFF_TEST_DIR]/panics/01_unused.rs:11:18
   |
11 | fn doesnt_call_f(f: impl Fn() -> i32) -> i32 {
   |                  ^ help: if this is intentional, prefix it with an underscore: `_f`
   |
   = note: `#[warn(unused_variables)]` on by default

error: function main::{closure#0} directly contains 1 unjustified panicking axiom, but is not annotated panicking
 --> [SNIFF_TEST_DIR]/panics/01_unused.rs:3:17
  |
3 |     let panic = || panic!();
  |                 ^^
  |
  = note: reachable from [main ([SNIFF_TEST_DIR]/panics/01_unused.rs:4:5) -> *main::{closure#0}*]
note: explicit panic here
 --> [SNIFF_TEST_DIR]/panics/01_unused.rs:3:20
  |
3 |     let panic = || panic!();
  |                    ^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

'''
